--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="container">
         <header>
-            <form action="">
-                <input type="text" placeholder="Search for a gif....">
+            <form id="search-form">
+                <input type="text" id="search-input" placeholder="Search for a gif....">
                 <button type="submit">Search</button>
             </form>
         </header>
