--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 <body>
     <div class="container">
         <header>
-            <form id="search-form">
-                <input type="text" id="search-input" placeholder="Search for a gif....">
+            <form id="search-form" class="search-form">
+                <input type="text" id="search-input" class="search-input" placeholder="Search for a gif....">
                 <button type="submit">Search</button>
             </form>
         </header>
 
-        <div id="results" class="results">
-
-        </div>
+        <div id="results" class="results"></div>
     </div>
 
     <script src="app.js"></script>
